--- a/omok2/game.html
+++ b/omok2/game.html
@@ -28,10 +28,25 @@
         <button class="btn" id="home">HOME</button>
       </div>
     </div>
-    <script src="forbit.js"></script>
+
+    <div id="winModal" class="modal">
+      <div class="modal-content">
+        <div class="winnerIT">
+          <img id="winnerImage" src="" alt="승리 이미지" />
+          <div class="winnertBox">
+            <p id="winnerText"></p>
+          </div>
+        </div>
+
+        <button onclick="closeModal()">확인</button>
+      </div>
+    </div>
+
+    <!-- <script src="forbit.js"></script> -->
     <!-- <script src="forbit2.js"></script> -->
     <!-- <script src="dont2.js"></script> -->
     <!-- <script src="dont.js"></script> -->
-    <script src="game.js"></script>
+    <!-- <script src="game.js"></script> -->
+    <script src="game2.js"></script>
   </body>
 </html>
