--- a/omok2/com.html
+++ b/omok2/com.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>오목 게임</title>
-    <link rel="stylesheet" href="game.css" />
+    <link rel="stylesheet" href="com.css" />
   </head>
   <body>
     <div class="window">
@@ -44,11 +44,6 @@
       </div>
     </div>
 
-    <!-- <script src="forbit.js"></script> -->
-    <!-- <script src="forbit2.js"></script> -->
-    <!-- <script src="dont2.js"></script> -->
-    <!-- <script src="dont.js"></script> -->
-    <!-- <script src="game.js"></script> -->
-    <script src="game2.js"></script>
+    <script src="com.js"></script>
   </body>
 </html>
