33규칙 및 컴퓨터 플레이 기능 필요

--- a/omok/omok.html
+++ b/omok/omok.html
@@ -13,6 +13,7 @@
         <div class="main-borad">
           <canvas class="borad"></canvas>
         </div>
+
         <div class="menu">
           <div class="menu-in">
             <div class="ps">
@@ -28,6 +29,7 @@
                 </div>
               </div>
             </div>
+
             <div class="pys">
               <p>Player select</p>
               <div class="first-player">
@@ -46,9 +48,24 @@
                 />
               </div>
             </div>
+
             <div class="time">
               <p>Time</p>
               <span class="timer-display">30</span>
+            </div>
+
+            <div class="point">
+              <p>Point</p>
+              <div>
+                <div class="blackPoint">
+                  <span class="point">흑돌</span>
+                  <span class="point">0</span>
+                </div>
+                <div class="whitePoint">
+                  <span class="point">백돌</span>
+                  <span class="point">0</span>
+                </div>
+              </div>
             </div>
 
             <div class="button">
@@ -59,6 +76,7 @@
         </div>
       </div>
     </div>
+    <script src="gameSetting.js"></script>
     <script src="omok.js"></script>
   </body>
 </html>
