--- a/omokteam/game.html
+++ b/omokteam/game.html
@@ -25,8 +25,10 @@
       <div class="btn_box">
         <button class="btn" id="reset">재시작</button>
         <div class="time">
-          <p>Time</p>
-          <span class="timer-display">30</span>
+          <div class="line">
+            <p>Time</p>
+            <span class="timer-display">30</span>
+          </div>
         </div>
         <button class="btn" id="home">HOME</button>
       </div>
@@ -42,8 +44,8 @@
           </div>
         </div>
 
-        <button onclick="closeModal()">재대결</button>
-        <button onclick="closeModalOnly()">판보기</button>
+        <button onclick="closeModal()" class="end">재대결</button>
+        <button onclick="closeModalOnly()" class="end">판보기</button>
       </div>
     </div>
 
