--- a/example.html
+++ b/example.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div id="board" class="board"></div>
+    <div id="timer">타이머: 30</div>
     <button onclick="resetBoard()">게임 초기화</button>
     <script src="example.js"></script>
   </body>
