제목옆에 통추가

--- a/omokteam/game.html
+++ b/omokteam/game.html
@@ -9,7 +9,14 @@
   <body>
     <div class="window">
       <header class="title">
+        <div>
+          <img src="img/흑돌.png" class = "img_top" id="black_top">
+        </div>
         <h1>즐거운 오목</h1>
+        <div>
+          <img src="img/백돌.png" class = "img_top" id="white_top">
+        </div>
+        <div class="white_top"></div>
       </header>
 
       <div class="turn_box">
