--- a/omok_final/game.html
+++ b/omok_final/game.html
@@ -9,7 +9,14 @@
   <body>
     <div class="window">
       <header class="title">
+        <div>
+          <img src="img/흑돌.png" class = "img_top" id="black_top">
+        </div>
         <h1>즐거운 오목</h1>
+        <div>
+          <img src="img/백돌.png" class = "img_top" id="white_top">
+        </div>
+        <div class="white_top"></div>
       </header>
 
       <div class="turn_box">
@@ -24,7 +31,12 @@
 
       <div class="btn_box">
         <button class="btn" id="reset">재시작</button>
-        <div></div>
+        <div class="time">
+          <div class="line">
+            <p>Time</p>
+            <span class="timer-display">30</span>
+          </div>
+        </div>
         <button class="btn" id="home">HOME</button>
       </div>
     </div>
@@ -39,8 +51,8 @@
           </div>
         </div>
 
-        <button onclick="closeModal()">재대결</button>
-        <button onclick="closeModalOnly()">판보기</button>
+        <button onclick="closeModal()" class="end">재대결</button>
+        <button onclick="closeModalOnly()" class="end">판보기</button>
       </div>
     </div>
 
@@ -49,6 +61,7 @@
     <!-- <script src="dont2.js"></script> -->
     <!-- <script src="dont.js"></script> -->
     <!-- <script src="game.js"></script> -->
+    <script src="timer.js"></script>
     <script src="game2.js"></script>
   </body>
 </html>
