--- a/omokteam/index.html
+++ b/omokteam/index.html
@@ -36,12 +36,12 @@
           >
         </div>
       </div>
-      <div class="todo">원하는 모드를 클릭하세요!</div>
+      <div class="todo">게임을 시작하시겠습니까?</div>
 
-      <div class="match">
-        <button class="match_bnt" id="com">컴퓨터</button>
-        <div></div>
-        <button class="match_bnt" id="useruser">2인용</button>
+
+        <div class = "match_div">
+          <button class="match_bnt" id="useruser">2인용</button>
+        </div>
       </div>
     </div>
     <script src="index.js"></script>
