--- a/omokteam/game.html
+++ b/omokteam/game.html
@@ -62,6 +62,6 @@
     <!-- <script src="dont.js"></script> -->
     <!-- <script src="game.js"></script> -->
     <script src="timer.js"></script>
-    <script src="game2.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
