--- a/omok_final/game.html
+++ b/omok_final/game.html
@@ -10,11 +10,11 @@
     <div class="window">
       <header class="title">
         <div>
-          <img src="img/흑돌.png" class = "img_top" id="black_top">
+          <img src="img/흑돌.png" class="img_top" id="black_top" />
         </div>
         <h1>즐거운 오목</h1>
         <div>
-          <img src="img/백돌.png" class = "img_top" id="white_top">
+          <img src="img/백돌.png" class="img_top" id="white_top" />
         </div>
         <div class="white_top"></div>
       </header>
@@ -56,12 +56,7 @@
       </div>
     </div>
 
-    <!-- <script src="forbit.js"></script> -->
-    <!-- <script src="forbit2.js"></script> -->
-    <!-- <script src="dont2.js"></script> -->
-    <!-- <script src="dont.js"></script> -->
-    <!-- <script src="game.js"></script> -->
     <script src="timer.js"></script>
-    <script src="game2.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
